# gloo

./: .gitignore
example/alexnet/: CMakeLists.txt  README.md  alexnet.h  alexnet_cuda.h  alexnet_trainer.cpp  config.json  config_parser.h  generate_heatmap.py  parse_logs.py  run_training.sh  topology.h  topology_config.json  training_output.txt
gloo/rendezvous/: file_store.cc  file_store.h  hash_store.cc  hash_store.h  prefix_store.cc  prefix_store.h  store.cc  store.h
gloo/transport/tcp/: error.cc  error.h  loop.h
